# ha-bbc-weather

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: tests.yml
custom_components/bbc_weather/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  manifest.json  strings.json  weather.py
tests/custom_components/bbc_weather/: conftest.py  test_api.py  test_config_flow.py  test_coordinator.py  test_weather.py
