[project]
name = "ha-bbc-weather"
version = "1.0.0"
description = "BBC Weather custom integration for Home Assistant"
license = "MIT"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
